# skill_multi_agent

./: .env.docker  .env.template  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  README.md  __init__.py  build-image.sh  docker-compose.yml  entrypoint.sh  export-image.bat  export-image.sh  frontend_session_example.js  nginx.conf  pyproject.toml  start_with_config.bat  start_with_config.sh  test01.py  test_interrupt.py  企业画像长期记忆系统设计方案.md  单智能体优化论文支持分析.md  单智能体优化论文支持分析备份.md  基于自规划的从零开始的自动智能体学习_中文.md  数据库设计文档.md  智能体指导大型语言模型成为通用的零样本推理器.md  项目技术栈分析报告.md
app/: main.py
app/api/: __init__.py  agents.py  ai.py  application_chat.py  auth.py
app/memory/: models.py
app/multiAgent/agents/: enterprise_profile_agent.py  toolbox_agent.py
app/multiAgent/analysis/: blue_green_access_agent.py  blue_green_policy_agent.py  blue_green_product_agent.py  blue_green_solution_agent.py
app/multiAgent/common/: __init__.py  (+5 more)
app/server/: models.py  server.py
config/: default.yaml  default.yaml.backup  sit.yaml  uat.yaml
deploy/docker/: README.md  env.template
docs/: uv-hatchling-migration-guide.md
scripts/: inint.sh  pip.sh  start_postgresql.sh
scripts/plsql/: cbondissuerrating.sql  cbondratingdefinition.sql  loan_product_info_migration.sql  los_ent_info.sql  policy_tools_migration.sql  session_history.sql  sys_user.sql
scripts/sql/: manager_profiles.sql  产品agent-sql.txt  客户画像agent-sql.txt  工具agent-sql.txt
studio/: .env.sit.template  .env.uat.template  env.example  langgraph.json  multi-test.py  switch_env.sh
tests/: e2e_test_server.py  test_unified_supervisor_stream.py
tests/curl/: agents_test.txt  interrupt_resume_commands.md  test_interrupt_resume.sh
tests/test_framework/: __init__.py  test_agents.py  test_supervisor.py
web/: package-lock.json  package.json  proxy-server.js  vue.config.js
web/src/: main.js
(+222 files in other folders)
